--- a/account_invoice_auto_send_mail/views/account_invoice_view.xml
+++ b/account_invoice_auto_send_mail/views/account_invoice_view.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="account.invoice_form" />
         <field name="priority" eval="20"/>                
         <field name="arch" type="xml">
-            <field name="team_id" position="after">
+            <field name="date_invoice" position="after">
                 <field name="date_invoice_send_mail"/>
             </field>                                                
         </field>
