--- a/ont_base_account/views/account_move.xml
+++ b/ont_base_account/views/account_move.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <record id="account_doctorproperty_view_move_tree" model="ir.ui.view">
-        <field name="name">account_doctorproperty_view_move_tree</field>
+    <record id="ont_base_account_view_account_move_filter" model="ir.ui.view">
+        <field name="name">ont_base_account_view_account_move_filter</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_account_move_filter"/>
+        <field name="arch" type="xml">
+            <field name="name" position="after">
+                <field name="amount"/>
+            </field>            
+        </field>
+    </record>
+    <record id="ont_base_account_view_move_tree" model="ir.ui.view">
+        <field name="name">ont_base_account_view_move_tree</field>
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_tree"/>
         <field name="arch" type="xml">
@@ -14,8 +24,8 @@
             </field>
         </field>
     </record>
-    <record id="account_doctorproperty_view_move_form" model="ir.ui.view">
-        <field name="name">account_doctorproperty_view_move_form</field>
+    <record id="ont_base_account_view_move_form" model="ir.ui.view">
+        <field name="name">ont_base_account_view_move_form</field>
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
