--- a/ont_base_account/views/account_move_line.xml
+++ b/ont_base_account/views/account_move_line.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <record id="view_move_line_tree_doctorproperty" model="ir.ui.view">
-        <field name="name">view_move_line_tree_doctorproperty</field>
+    <record id="ont_base_account_view_account_move_line_filter" model="ir.ui.view">
+        <field name="name">ont_base_account_view_account_move_line_filter</field>
+        <field name="model">account.move.line</field>
+        <field name="inherit_id" ref="account.view_account_move_line_filter"/>
+        <field name="arch" type="xml">
+            <field name="name" position="after">
+                <field name="credit"/>
+                <field name="debit"/>
+            </field>                        
+        </field>
+    </record>
+    <record id="ont_base_account_view_move_line_tree" model="ir.ui.view">
+        <field name="name">ont_base_account_view_move_line_tree</field>
         <field name="model">account.move.line</field>
         <field name="inherit_id" ref="account.view_move_line_tree"/>
         <field name="arch" type="xml">
@@ -14,8 +25,8 @@
             </field>            
         </field>
     </record>
-    <record id="account_doctorproperty_view_move_line_form" model="ir.ui.view">
-        <field name="name">account_doctorproperty_view_move_line_form</field>
+    <record id="ont_base_account_view_move_line_form" model="ir.ui.view">
+        <field name="name">ont_base_account_view_move_line_form</field>
         <field name="model">account.move.line</field>
         <field name="inherit_id" ref="account.view_move_line_form"/>
         <field name="arch" type="xml">
@@ -27,8 +38,8 @@
             </field>                        
         </field>
     </record>
-    <record id="account_doctorproperty_view_account_move_line_pivot" model="ir.ui.view">
-        <field name="name">account_doctorproperty_view_account_move_line_pivot</field>
+    <record id="ont_base_account_view_account_move_line_pivot" model="ir.ui.view">
+        <field name="name">ont_base_account_view_account_move_line_pivot</field>
         <field name="model">account.move.line</field>
         <field name="arch" type="xml">
             <pivot string="Account Move Lines" display_quantity="true">
