--- a/ont_base_account/views/sale_order.xml
+++ b/ont_base_account/views/sale_order.xml
@@ -7,7 +7,7 @@
         <field name="priority" eval="20"/>                
         <field name="arch" type="xml">
             <field name="payment_term_id" position="after">
-                <field name="payment_mode_id"/>
+                <field name="payment_mode_id" domain="[('payment_order_ok','=',True),('payment_type', '=', 'inbound')]" options="{'no_create': True}" string="Forma de pago"/>
             </field>                        
         </field>
     </record>
