--- a/account_invoice_shipping_expedition/views/account_invoice.xml
+++ b/account_invoice_shipping_expedition/views/account_invoice.xml
@@ -7,10 +7,10 @@
         <field name="arch" type="xml">
             <field name="reference" position="after">
                 <field name="is_supplier_delivery_carrier" invisible="True"/>
-                <field name="shipping_expedition_datas"  widget="binary"  filename="shipping_expedition_datas" attrs="{'invisible':[('is_supplier_delivery_carrier', '==', False)]}" />
+                <field name="shipping_expedition_datas"  widget="binary"  filename="shipping_expedition_datas" attrs="{'invisible':['|', ('is_supplier_delivery_carrier', '=', False), ('state', '=', 'draft')]}" />
             </field>
             <xpath expr="//page[1]" position="after">
-                <page id="shipping_expedition_ids" string="Expediciones" attrs="{'invisible':[('is_supplier_delivery_carrier', '==', False)]}">
+                <page id="shipping_expedition_ids" string="Expediciones" attrs="{'invisible':[('is_supplier_delivery_carrier', '=', False)]}">
                     <field name="shipping_expedition_ids" >
                         <tree string="Expediciones">
                            <field name="picking_id" />
