https://grupoarelux.atlassian.net/browse/ODOOONIAD-216

--- a/account_invoice_commission/views/account_invoice.xml
+++ b/account_invoice_commission/views/account_invoice.xml
@@ -9,6 +9,9 @@
             <xpath expr="//button[@name='action_invoice_draft']" position="after">
                 <button name="action_regenerate_commission_multi" type="object" string="Calcular comision" attrs="{'invisible':[('state', 'not in', ('open','paid'))]}"  groups="base.group_no_one" />
             </xpath>
+            <field name="date_invoice" position="after">
+                <field name="commission_date_paid" groups="base.group_no_one"/>
+            </field>
             <field name="residual" position="after">
                 <field name="commission" groups="base.group_no_one"/>
 	       </field>
