--- a/ont_base_account/views/account_payment_mode.xml
+++ b/ont_base_account/views/account_payment_mode.xml
@@ -7,6 +7,7 @@
         <field name="arch" type="xml">       
             <field name="name" position="before">
                 <field name="position"/>
+                <field name="show_payment_method_id_journal_ids_in_pdf"/>
             </field>             
         </field>
     </record>
