--- a/ont_base_account/views/account_invoice.xml
+++ b/ont_base_account/views/account_invoice.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <record id="ont_base_account_view_account_invoice_filter" model="ir.ui.view">
+        <field name="name">ont_base_account_view_account_invoice_filter</field>
+        <field name="model">account.invoice</field>
+        <field name="inherit_id" ref="account.view_account_invoice_filter"/>
+        <field name="arch" type="xml">
+            <field name="number" position="after">
+                <field name="number" filter_domain="[('amount_untaxed','=',self)]" string="Base imponible"/>
+                <field name="number" filter_domain="[('total','=',self)]" string="Total"/>
+                <field name="number" filter_domain="[('residual','=',self)]" string="Importe pendiente"/>
+            </field>
+        </field>
+    </record>
     <record id="ont_base_account_invoice_tree" model="ir.ui.view">
         <field name="name">ont_base_account_invoice_tree</field>
         <field name="model">account.invoice</field>
