--- a/ont_base_account/views/account_move.xml
+++ b/ont_base_account/views/account_move.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="account.view_account_move_filter"/>
         <field name="arch" type="xml">
             <field name="name" position="after">
-                <field name="amount"/>
+                <field name="name" filter_domain="[('amount','=',self)]" string="Total"/>
             </field>            
         </field>
     </record>
