--- a/account_invoice_auto_send_mail/views/account_invoice_view.xml
+++ b/account_invoice_auto_send_mail/views/account_invoice_view.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
     <record id="account_invoice_auto_send_mail_form" model="ir.ui.view">
-        <field name="name">account_invoice_auto_send_mail_form</field>
+        <field name="name">account.invoice.auto.send.mail.form</field>
         <field name="model">account.invoice</field>
         <field name="inherit_id" ref="account.invoice_form" />
         <field name="priority" eval="20"/>                
@@ -10,5 +11,6 @@
                 <field name="date_invoice_send_mail"/>
             </field>                                                
         </field>
-    </record>    
+    </record>
+
 </odoo>
