--- a/account_invoice_auto_send_mail/views/account_journal_view.xml
+++ b/account_invoice_auto_send_mail/views/account_journal_view.xml
@@ -3,7 +3,7 @@
 
     <record id="account_journal_auto_send_mail_form" model="ir.ui.view">
         <field name="name">account.journal.auto.send.mail.form</field>
-        <field name="model">account.journal<field>
+        <field name="model">account.journal</field>
         <field name="inherit_id" ref="account.view_account_journal_form" />
         <field name="priority" eval="20"/>
         <field name="arch" type="xml">
