--- a/account_invoice_auto_send_mail/views/account_journal_view.xml
+++ b/account_invoice_auto_send_mail/views/account_journal_view.xml
@@ -7,10 +7,10 @@
         <field name="inherit_id" ref="account.view_account_journal_form" />
         <field name="priority" eval="20"/>
         <field name="arch" type="xml">
-            <field name="outbound_payment_method_ids" position="after">
-                <field name="invoice_mail_template_id" options='{"no_create": True, "no_create_edit": True}'/>
-                <field name="invoice_mail_template_id_author_id" options='{"no_create": True, "no_create_edit": True}'/>
-                <field name="invoice_mail_days"/>
+            <field name="account_control_ids" position="after">
+                <field name="invoice_mail_template_id" options='{"no_create": True, "no_create_edit": True}' attrs="{'invisible': [('type','in', ('purchasae',cash','bank','general'))]}"/>
+                <field name="invoice_mail_template_id_author_id" options='{"no_create": True, "no_create_edit": True}' attrs="{'invisible': [('type','in', ('purchasae',cash','bank','general'))]}"/>
+                <field name="invoice_mail_days" attrs="{'invisible': [('type','in', ('purchasae',cash','bank','general'))]}"/>
             </field>
         </field>
     </record>
