--- a/account_invoice_auto_send_mail/views/account_journal_view.xml
+++ b/account_invoice_auto_send_mail/views/account_journal_view.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
     <record id="account_journal_auto_send_mail_form" model="ir.ui.view">
@@ -9,7 +8,7 @@
         <field name="arch" type="xml">
             <field name="account_control_ids" position="after">
                 <field name="invoice_mail_template_id" options='{"no_create": True, "no_create_edit": True}' attrs="{'invisible': [('type','not in', ('sale'))]}"/>
-                <field name="invoice_mail_template_id_author_id" options='{"no_create": True, "no_create_edit": True}' attrs="{'invisible': [('type','not in', ('sale'))]}"/>
+                <field name="invoice_mail_author_id" options='{"no_create": True, "no_create_edit": True}' attrs="{'invisible': [('type','not in', ('sale'))]}"/>
                 <field name="invoice_mail_days" attrs="{'invisible': [('type','not in', ('sale'))]}"/>
             </field>
         </field>
