--- a/account_invoice_line_price_unit_float/views/account_invoice_view.xml
+++ b/account_invoice_line_price_unit_float/views/account_invoice_view.xml
@@ -5,6 +5,7 @@
         <field name="name">account_invoice_line_price_unit_float_invoice_form</field>
         <field name="model">account.invoice</field>
         <field name="inherit_id" ref="account.invoice_form"/>
+        <field name="priority">100</field>
         <field name="arch" type="xml">
             <xpath expr="//page/field[@name='invoice_line_ids']/tree/field[@name='price_unit']" position="replace">
                 <field name="price_unit" widget="monetary" />
